facet-json2/tests/integration/snapshots/r#mod__integration__err__deserialize_tuple_empty_nested_from_empty_nested_3x.snap
---
source: facet-json2/tests/integration/err.rs
expression: err
---
[31mError:[0m 
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m json:1:1 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249m[[0m[38;5;249m[[0m[38;5;249m][0m[38;5;249m][0m[38;5;249m][0m[38;5;249m][0m
 [38;5;240m  │[0m [31m│[0m 
 [38;5;240m  │[0m [31m╰[0m[31m─[0m Unexpected outcome: got [31mListStarted[39m, wanted [31mscalar or list close[39m
[38;5;246m───╯[0m
