facet-json2/tests/integration/snapshots/r#mod__integration__err__unknown_field_with_rename.snap
---
source: facet-json2/tests/integration/err.rs
expression: err
---
[31mError:[0m 
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m json:1:1 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249m:[0m[38;5;249m [0m[38;5;249m"[0m[38;5;249mv[0m[38;5;249ma[0m[38;5;249ml[0m[38;5;249mu[0m[38;5;249me[0m[38;5;249m"[0m[38;5;249m}[0m
 [38;5;240m  │[0m [31m│[0m 
 [38;5;240m  │[0m [31m╰[0m[31m─[0m Unknown field: [31mwrong_name[39m for shape [33mRenamedFields[39m
[38;5;246m───╯[0m
